--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.8",
+    "firebase": "^11.6.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
