--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@twilio/conversations": "^2.6.2",
     "chart.js": "^4.4.8",
     "firebase": "^11.6.0",
-    "next": "15.3.0",
+    "next": "^15.3.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
