--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@twilio/conversations": "^2.6.2",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.5.0",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.23.5",
     "next": "^15.3.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
