--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.23.5",
+    "nest": "^0.1.6",
     "next": "^15.3.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
